WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
173637
Fix AVVideoCaptureSource frameRate setter and getter
https://bugs.webkit.org/show_bug.cgi?id=173637
Summary
Fix AVVideoCaptureSource frameRate setter and getter
youenn fablet
Reported
2017-06-20 21:40:29 PDT
Fix AVVideoCaptureSource frameRate setter and getter
Attachments
Patch
(5.46 KB, patch)
2017-06-20 21:48 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch for landing
(8.30 KB, patch)
2017-06-21 13:18 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Patch
(8.30 KB, patch)
2017-06-21 13:22 PDT
,
youenn fablet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2017-06-20 21:48:53 PDT
Created
attachment 313489
[details]
Patch
youenn fablet
Comment 2
2017-06-20 22:47:54 PDT
rdar://problem/32593823
youenn fablet
Comment 3
2017-06-21 13:18:20 PDT
Created
attachment 313540
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2017-06-21 13:21:19 PDT
Comment on
attachment 313540
[details]
Patch for landing Rejecting
attachment 313540
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 313540, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebCore/ChangeLog contains OOPS!. Full output:
http://webkit-queues.webkit.org/results/3973638
youenn fablet
Comment 5
2017-06-21 13:22:36 PDT
Created
attachment 313542
[details]
Patch
WebKit Commit Bot
Comment 6
2017-06-21 14:06:25 PDT
Comment on
attachment 313542
[details]
Patch Clearing flags on attachment: 313542 Committed
r218647
: <
http://trac.webkit.org/changeset/218647
>
WebKit Commit Bot
Comment 7
2017-06-21 14:06:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug